--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-lazyload": "^3.2.0",
     "react-markdown": "^8.0.0",
