--- a/package.json
+++ b/package.json
@@ -3,21 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.4",
     "fullpage.js": "^3.1.2",
     "marked": "^4.0.12",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-jwt": "^1.1.6",
     "react-lazy-load-image-component": "^1.5.1",
     "react-lazyload": "^3.2.0",
     "react-markdown": "^8.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-modal-login": "^2.0.7",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-social": "^1.10.0",
+    "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
